# tasker

./: .gitignore  README.md  product-requirement-document.md  pyproject.toml
assets/sample_email/: 回复：回复：FYI Q1 stress test data  template  deadline.msg  回复：回复：回复：仅正文无附件确认函.msg  回复：回复：回复：回复：回复：大家养老2025年偿付能力压力测试数据需求.msg  回复：回复：回复：回复：回复：示例寿险2026年Q1偿付能力压力测试数据报送说明.msg  回复：附件路由测试多类型文件.msg
src/tasker/: __init__.py  paths.py
src/tasker/cli/: __init__.py  classify_cmd.py  classify_flow.py  common.py  config_cmd.py  deprecation.py  doctor.py  doctor_checks.py  ingest_cmd.py  ingest_outlook_cmd.py  legacy_cmd.py  mail_inbox_workflow_cmd.py  mail_subcommands.py  main.py  outlook_cmd.py  project_cmd.py  route_cmd.py  setup_cmd.py  tasks.py
src/tasker/domain/: __init__.py  classification.py  enums.py  exceptions.py  parsed_msg.py  routing.py
src/tasker/infrastructure/: __init__.py  lifecycle.py
src/tasker/infrastructure/ai/: __init__.py  (+1 more)
src/tasker/services/: __init__.py  classification.py  config_file.py  ingest.py  routing.py
src/tasker/ui/: __init__.py  app.py  open_external.py  workspace.py
tests/: test_package.py  test_smoke.py
tests/cli/: test_classify_command.py  test_commands.py  test_doctor.py  test_mail_inbox_workflow_command.py  test_outlook_command.py  test_setup_cmd.py
tests/infrastructure/: test_category_util.py  test_config_and_database.py  test_msg_ingest.py  test_outlook_inbox.py  test_outlook_ingest.py
tests/services/: test_classification.py  test_config_file.py  test_routing.py
tests/ui/: test_app.py  test_workspace_and_open_external.py
(+27 files in other folders)
